--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,7 +20,7 @@ a {
   --margin: 60px;
   --primary:#f0dc00;
   --primary-hover : #ee9d2b;
-  --bg-img: #0f2d0f;
+  --bg-img: #0f172d;
 }
 
 @media screen and (max-width: 900px) {
